# neural-tts

./: .gitignore  LICENSE  README.md  mise.toml
daemon/: pyproject.toml
daemon/src/kde_tts_daemon/: __init__.py  __main__.py  config.py  control.py  daemon.py  protocol.py  proxy.py  resample.py  supervisor.py  voices.py
daemon/src/neural_tts_daemon/: __init__.py  __main__.py  config.py  control.py  daemon.py  protocol.py  proxy.py  sd_notify.py  supervisor.py  voice_index.py  voices.py
proto/: kde_tts.proto  neural_tts.proto
providers/: registry.toml
providers/kokoro-onnx/: pyproject.toml
providers/kokoro-onnx/src/kde_tts_provider_kokoro_onnx/: __init__.py  __main__.py  engine.py  provider.py
providers/kokoro-onnx/src/kde_tts_provider_kokoro_onnx/pb/: kde_tts_pb2.py
providers/kokoro-onnx/src/neural_tts_provider_kokoro_onnx/: __init__.py  __main__.py  engine.py  provider.py
providers/longcat-audiodit/: pyproject.toml
providers/longcat-audiodit/src/neural_tts_provider_longcat_audiodit/: __init__.py  __main__.py  chunker.py  engine.py  provider.py  voices.py
providers/longcat-audiodit/src/neural_tts_provider_longcat_audiodit/pb/: neural_tts_pb2.py  neural_tts_pb2.pyi
providers/moss-tts-nano/: pyproject.toml
providers/moss-tts-nano/src/neural_tts_provider_moss_tts_nano/: __main__.py  engine.py  provider.py  voices.py
providers/omnivoice/: pyproject.toml
providers/omnivoice/src/neural_tts_provider_omnivoice/: __main__.py  chunker.py  engine.py  provider.py  voices.py
providers/qwen3-tts/: pyproject.toml
providers/qwen3-tts/src/neural_tts_provider_qwen3_tts/: __main__.py  chunker.py  engine.py  provider.py  voices.py
scripts/: _common.py  _longcat_pin.py  _moss_tts_nano_pin.py  download_models.py  install.py  install_provider.py  uninstall.py  uninstall_provider.py
share/speech-dispatcher/: neural-tts.conf
share/systemd/: kde-tts-control.socket  kde-tts.service.in  kde-tts.socket  neural-tts-control.socket  neural-tts.service.in  neural-tts.socket
tests/: conftest.py  test_protocol.py  test_resample.py  test_supervisor_with_fake.py
