[project]
name = "kde-tts-daemon"
version = "0.1.0"
description = "User systemd daemon that bridges speech-dispatcher to pluggable TTS provider subprocesses"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "soxr>=0.5",
    "protobuf>=5.27",
    "langcodes>=3.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "grpcio-tools>=1.66",   # provides `python -m grpc_tools.protoc`; only needed to regen
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kde_tts_daemon"]
