[project]
name = "neural-tts-provider-kokoro-onnx"
version = "0.1.0"
description = "Kokoro ONNX TTS provider for neural-tts-daemon"
requires-python = ">=3.11,<3.13"
dependencies = [
    "kokoro-onnx>=0.4.0",
    "onnxruntime>=1.17",
    "numpy>=1.26",
    "protobuf>=5.27",
]

[project.optional-dependencies]
# `[cuda,cudnn]` pulls nvidia-{cuda-runtime,cuda-nvrtc,cufft,curand,cudnn}-cu12
# as pip wheels (no system CUDA install needed). nvidia-cublas-cu12
# (libcublas / libcublasLt) is also required but NOT in ORT's [cuda] extra
# as of 1.26 — list it explicitly. Without these, onnxruntime silently
# falls back to CPU at session creation, hiding the actual failure.
gpu = [
    "onnxruntime-gpu[cuda,cudnn]>=1.17",
    "nvidia-cublas-cu12~=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neural_tts_provider_kokoro_onnx"]
