[project]
name = "neural-tts-provider-moss-tts-nano"
version = "0.1.0"
description = "MOSS-TTS-Nano zero-shot voice-cloning TTS provider for neural-tts-daemon"
requires-python = ">=3.11,<3.13"

# Upstream is vendored at the commit pinned in scripts/_moss_tts_nano_pin.py.
# We import `onnx_tts_runtime` from there via sys.path. This list mirrors the
# runtime imports actually exercised by the ONNX inference path:
#   onnx_tts_runtime.py: numpy, sentencepiece, torch, torchaudio, onnxruntime
#   text_normalization_pipeline.py: stdlib only (WeTextProcessing is loaded
#       lazily inside .start() — we never call it, so pynini is not needed)
# The fastapi/uvicorn/transformers/WeTextProcessing entries in upstream's
# requirements.txt are for the HTTP server, the torch-only `infer.py` path,
# and pynini-based text normalization — none of which we exercise.
dependencies = [
    "numpy>=1.24",
    "sentencepiece>=0.1.99",
    "onnxruntime>=1.20",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "soundfile>=0.12",
    "huggingface-hub>=0.24",
    "protobuf>=5.27",
]

[project.optional-dependencies]
# Swap CPU onnxruntime for the GPU build. `pip` would need
# `pip uninstall onnxruntime` first; `uv sync --extra gpu` handles it cleanly
# because the two distributions share the `onnxruntime` namespace.
#
# `[cuda,cudnn]` pulls nvidia-{cuda-runtime,cuda-nvrtc,cufft,curand,cudnn}-cu12
# as pip wheels (so no system CUDA install needed). nvidia-cublas-cu12 is
# also required (libcublas / libcublasLt) but is NOT in ORT's [cuda] extra
# as of 1.26 — list it explicitly.
gpu = [
    "onnxruntime-gpu[cuda,cudnn]>=1.20",
    "nvidia-cublas-cu12~=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neural_tts_provider_moss_tts_nano"]
